- If more than about six entries in Protocol Parameters panel of Device Editor screen, make them scroll to limit maximum height of editor (Graham)
- Fix permissions for DecodeIR.html and DecodeIR_ChangeLog.txt (Greg)
- Make JP1 Parallel the last available interface (Greg)
- Update Digit Maps through 520 (Greg)
-- Beta 2
- Made installation directory read-only by putting rmaster.err in java.io.tmpdir, and (on non-Windows, Windows already had similar fix) putting resource file in home directory. (Bengt)
- Allow editing of a built-in protocol with code missing from protocols.ini, to permit custom code to be entered (Graham)
- When autodetecting interface, if returned port name is an empty string, treat at null, which solves issue of jp12serial port being found even when not connected (Graham)
- Fix bug that repeated use of Edit Device button on General panel was not recognising changes made in earlier edit (Graham)
- For S3C80 disassembly, label absolute addresses within the protocol code as well as relative ones, since CALL only takes absolute addresses and upgrades are executed from a standard location (Graham)

Changes for v2.01
-- Alpha --
- Fix NullPointerException when editing DeviceCombiner protocol (Graham)
- Implement upgrade overflow into learned signal and advanced code regions (Graham)
- When loading a KM file with a protocol named "Manual Settings", append the PID to the name to prevent mis-identification if there is a similar subsequent load (Graham)
- Fix bug causing button restrictions set by the Button class constructor to be overridden, rather than supplemented, by explicitly set restrictions (Graham)
- Fix bug preventing KeyMove setup code values > 2047 from being correctly imported when loading a .ir file (Graham)
- Implement highlighting (Graham)
-- Alpha 2 --
- Create File/Set Directory menu and implement entries to change RDF Path and Image Path (Graham)